# ObjectDetector

./: Benefits  CMakeLists.txt  Center.hpp  Filter.hpp  ObjectDetector.cpp  ObjectDetector.hpp  Parameters.hpp  Persistence.hpp  README.md  ThresholdAlgorithm.hpp  demo.cpp  main.cpp  parameters.xml
